Add radius collide.

--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <a href="canvas.html">Canvas D3JS</a>
 <a href="transition.html">Transition</a>
 <a href="transition2.html">Transition 2</a>
+<a href="collision.html">Collision</a>
